[metadata]
name = networkx-stubs
version = 0.0.0
description = Typing stubs for NetworkX
long_description = file: README.md
long_description_content_type = text/markdown
# license =
author = eggplants
author_email = w10776e8w@yahoo.co.jp
url = https://github.com/eggplants/networkx-stubs
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python

[options]
packages =
    networkx-stubs
install_requires =
    networkx
include_package_data = True

[options.package_data]
* = *.pyi

[options.extras_require]
dev =
    black
    flake8-black
    mypy
    flake8
    flake8-pyi
    setuptools
    wheel

[mypy]
python_version = 3.7
show_error_codes = True
pretty = True
# strict = True

[tool:black]
line-length = 88

[tool:isort]
profile = black

[flake8]
max-line-length = 88
